fix: adjust h2 margins and padding for consistent spacing; add section styling for layout

--- a/CSS/QuizWebpage/styles.css
+++ b/CSS/QuizWebpage/styles.css
@@ -56,6 +56,8 @@ h2 {
 }
 h2 {
   border-bottom: 4px solid #dfdfe2;
+  margin-top: 0;
+  padding-top: 60px
 }
 h3::before {
   content: "Question #";
@@ -70,4 +72,10 @@ h3::before {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
+}
+section {
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  max-width: 600px;
 }
